--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
@@ -31,6 +32,12 @@
       <artifactId>spring-tx</artifactId>
       <version>3.2.4.RELEASE</version>
     </dependency>
+    <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-jdbc</artifactId>
+	<version>3.2.4.RELEASE</version>
+    </dependency>
+            
     <dependency>
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
